--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -12,7 +12,7 @@
     color: #ffc107 !important;
 }
 /* label underline focus color */
-.input-field input[type=text]:focus,
+/*.input-field input[type=text]:focus,
 .input-field input[type=number]:focus,
 .input-field input[type=date]:focus,
 .input-field input[type=tel]:focus,
@@ -21,7 +21,7 @@
 .input-field input[type=password]:focus {
     border-bottom: 1px solid #ffc107 !important;
     box-shadow: 0 1px 0 0 #ffc107 !important;
-}
+}*/
 
 .back{
     position: absolute;
